# ignore system hideen file with ._ prefix

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,17 @@
 .Rhistory
 .RData
 .Ruserdata
+._RDataScientistTrack1.Rmd
+._edequality.dta
+._florida.dta
+._hotdogs.txt
+._international.sav
+._local_latitude.xls
+._person.sav
+._potatoes.csv
+._potatoes.txt
+._summary.xlsx
+._swimming_pools.csv
+._urbanpop.xls
+._urbanpop.xlsx
+._urbanpop_nonames.xlsx
